--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.2",
     "pinia": "^2.1.7",
+    "tibber-api": "^5.1.9",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "ws": "^8.14.2"
