--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql-ws": "^5.14.2",
     "pinia": "^2.1.7",
     "tibber-api": "^5.1.9",
+    "uuid": "^9.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "ws": "^8.14.2"
@@ -26,6 +27,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.18.8",
+    "@types/uuid": "^9.0.6",
     "@types/ws": "^8.5.8",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-typescript": "^12.0.0",
